--- a/course.html
+++ b/course.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     
-    <section class="header">
+    <section class="sub-header">
         <nav>
             <a href="index.html"><img src="imgs/logo.png" alt="logo"></a>
             <div class="nav-links" id="navLinks">
@@ -26,11 +26,7 @@
             <i class="fas fa-bars" onclick="showMenu()"></i>
         </nav>
 
-        <div class="text-box">
-            <h1>World's Biggest University</h1>
-            <p>Making website is now one of the easiest thing in the world. You just need to learn HTML, CSS, Javascript and you are good to go.</p>
-            <a href="" class="hero-btn">Visit Us To know More</a>
-        </div>
+        <h1>Our Courses</h1>
     </section>
 
     <!-- Course -->
@@ -55,36 +51,7 @@
         </div>
     </section>
 
-
-    <!---- CAMPUS ---->
-
-    <section class="campus">
-        <h1>Our Blobal Campus</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores officiis praesentium culpa dolor eius.</p>
-
-        <div class="row">
-            <div class="campus-col">
-                <img src="imgs/london.png" alt="London">
-                <div class="layer">
-                    <h3>LONDON</h3>
-                </div>
-            </div>
-            <div class="campus-col">
-                <img src="imgs/newyork.png" alt="NewYork">
-                <div class="layer">
-                    <h3>New York</h3>
-                </div>
-            </div>
-            <div class="campus-col">
-                <img src="imgs/washington.png" alt="Washington">
-                <div class="layer">
-                    <h3>WASHINGTON</h3>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!--- Facilities -->
+    <!-- Facilities -->
 
     <section class="facilities">
         <h1>Our Facilities</h1>
@@ -107,47 +74,6 @@
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Esse nisi quam eos dolor.</p>
             </div>
         </div>
-    </section>
-
-    <!-- TESTIMONIALS -->
-
-    <section class="testimonials">
-        <h1>Our Facilities</h1>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Esse nisi quam eos dolor.</p>
-
-        <div class="row">
-            <div class="testimonial-col">
-                <img src="imgs/user1.jpg" alt="">
-                <div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit quisquam magni, vel dolores esse ipsam obcaecati illo tempora in porro fugiat error modi magnam dolor. Iusto doloribus tenetur deleniti ea?</p>
-                    <h3>Christine Berkley</h3>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                </div>
-            </div>
-            <div class="testimonial-col">
-                <img src="imgs/user2.jpg" alt="">
-                <div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit quisquam magni, vel dolores esse ipsam obcaecati illo tempora in porro fugiat error modi magnam dolor. Iusto doloribus tenetur deleniti ea?</p>
-                    <h3>David Byer</h3>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star-o"></i>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Call To Action -->
-
-    <section class="cta">
-        <h1>Enroll For Our Various Online Courses <br> Anywhere From The World</h1>
-        <a href="#" class="hero-btn">CONTACT US</a>
     </section>
 
     <!-- Footer-->
